force-app/main/default/objects/CertifiedProducts__c/CertifiedProducts__c.object-meta.xml
<CustomObject>
    <label>Certified Product</label>
    <nameField>
        <displayFormat>CRTP-{0000000}</displayFormat>
        <label>Certified Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certified Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>