force-app/main/default/objects/CertifiedProducts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certified Products</relationshipLabel>
    <relationshipName>Certified_Products</relationshipName>
    <type>Lookup</type>
</CustomField>