force-app/main/default/objects/CertifiedProducts__c/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <label>Add On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>