force-app/main/default/objects/CertifiedProducts__c/fields/Bronze__c.field-meta.xml
<CustomField>
    <fullName>Bronze__c</fullName>
    <label>Bronze</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>