force-app/main/default/objects/CertifiedProducts__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate</label>
    <referenceTo>Certificate__c</referenceTo>
    <relationshipLabel>Certified Products</relationshipLabel>
    <relationshipName>Certified_Products</relationshipName>
    <type>Lookup</type>
</CustomField>