force-app/main/default/objects/CertifiedProducts__c/fields/CertifiedSite__c.field-meta.xml
<CustomField>
    <fullName>CertifiedSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified Site</label>
    <referenceTo>Certified_Sites__c</referenceTo>
    <relationshipLabel>Certified Products</relationshipLabel>
    <relationshipName>Certified_Products</relationshipName>
    <type>Lookup</type>
</CustomField>