force-app/main/default/objects/CertifiedProducts__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <label>Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USDA-NOP</fullName>
            </value>
            <value>
                <fullName>US-CA Equivalency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>