force-app/main/default/objects/CertifiedProducts__c/fields/Covered_by_PSR__c.field-meta.xml
<CustomField>
    <fullName>Covered_by_PSR__c</fullName>
    <label>Covered by PSR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>