force-app/main/default/objects/CertifiedProducts__c/fields/Diversion__c.field-meta.xml
<CustomField>
    <fullName>Diversion__c</fullName>
    <label>Diversion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>