force-app/main/default/objects/CertifiedProducts__c/fields/Diversion_Method__c.field-meta.xml
<CustomField>
    <fullName>Diversion_Method__c</fullName>
    <label>Diversion Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Composting</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>E-Waste</fullName>
            </value>
            <value>
                <fullName>Incineration (No Energy Recovery)</fullName>
            </value>
            <value>
                <fullName>Landfill</fullName>
            </value>
            <value>
                <fullName>Unaccounted for</fullName>
            </value>
            <value>
                <fullName>Reclamation</fullName>
            </value>
            <value>
                <fullName>Recycling</fullName>
            </value>
            <value>
                <fullName>Reuse</fullName>
            </value>
            <value>
                <fullName>Sale for Manufacturing</fullName>
            </value>
            <value>
                <fullName>Sale for Reuse</fullName>
            </value>
            <value>
                <fullName>Sale (Other)</fullName>
            </value>
            <value>
                <fullName>Waste-to-Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>