force-app/main/default/objects/CertifiedProducts__c/fields/Facility_name_and_address__c.field-meta.xml
<CustomField>
    <fullName>Facility_name_and_address__c</fullName>
    <label>Field/site name and address</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>