force-app/main/default/objects/CertifiedProducts__c/fields/FEFAC__c.field-meta.xml
<CustomField>
    <fullName>FEFAC__c</fullName>
    <label>FEFAC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>