force-app/main/default/objects/CertifiedProducts__c/fields/First_Certfication_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Certfication_Date__c</fullName>
    <label>First Certfication Date</label>
    <type>Date</type>
</CustomField>