force-app/main/default/objects/CertifiedProducts__c/fields/FSC_Product_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>FSC_Product_Group_Id__c</fullName>
    <description>FSC</description>
    <label>FSC Product Group Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>