force-app/main/default/objects/CertifiedProducts__c/fields/GGN__c.field-meta.xml
<CustomField>
    <fullName>GGN__c</fullName>
    <label>GGN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>