force-app/main/default/objects/CertifiedProducts__c/fields/GHG_option__c.field-meta.xml
<CustomField>
    <fullName>GHG_option__c</fullName>
    <label>GHG option</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>