force-app/main/default/objects/CertifiedProducts__c/fields/Gold__c.field-meta.xml
<CustomField>
    <fullName>Gold__c</fullName>
    <label>Gold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>