force-app/main/default/objects/CertifiedProducts__c/fields/Harvest_Included__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Included__c</fullName>
    <label>Harvest Included</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>