force-app/main/default/objects/CertifiedProducts__c/fields/HarvestMethodObserved__c.field-meta.xml
<CustomField>
    <fullName>HarvestMethodObserved__c</fullName>
    <label>Harvest Method Observed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>