force-app/main/default/objects/CertifiedProducts__c/fields/Hectares__c.field-meta.xml
<CustomField>
    <fullName>Hectares__c</fullName>
    <label>Hectares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>