force-app/main/default/objects/CertifiedProducts__c/fields/Input_material__c.field-meta.xml
<CustomField>
    <fullName>Input_material__c</fullName>
    <label>Input material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>