force-app/main/default/objects/CertifiedProducts__c/fields/ISCC_Add_On__c.field-meta.xml
<CustomField>
    <fullName>ISCC_Add_On__c</fullName>
    <label>ISCC Add On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>