force-app/main/default/objects/CertifiedProducts__c/fields/ISCC_waste_process_applied__c.field-meta.xml
<CustomField>
    <fullName>ISCC_waste_process_applied__c</fullName>
    <label>ISCC waste process applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>