force-app/main/default/objects/CertifiedProducts__c/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <label>Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W1 Rough wood</fullName>
            </value>
            <value>
                <fullName>W2 Wood charcoal</fullName>
            </value>
            <value>
                <fullName>W3 Wood in chips or particles</fullName>
            </value>
            <value>
                <fullName>W4 Impregnated/treated wood</fullName>
            </value>
            <value>
                <fullName>W5 Solid wood (sawn, chipped, peeled)</fullName>
            </value>
            <value>
                <fullName>W6 Products from planing mill</fullName>
            </value>
            <value>
                <fullName>W7 Veneer</fullName>
            </value>
            <value>
                <fullName>W8 Wood panels</fullName>
            </value>
            <value>
                <fullName>W9 Engineered wood products</fullName>
            </value>
            <value>
                <fullName>W10 Wood package and similar</fullName>
            </value>
            <value>
                <fullName>W11 Wood for construction</fullName>
            </value>
            <value>
                <fullName>W12 Indoor furniture</fullName>
            </value>
            <value>
                <fullName>W13 Outdooor furniture and gardening</fullName>
            </value>
            <value>
                <fullName>W14 Musical instruments</fullName>
            </value>
            <value>
                <fullName>W15 Recreational goods</fullName>
            </value>
            <value>
                <fullName>W16 Household articles</fullName>
            </value>
            <value>
                <fullName>W17 Stationery of wood</fullName>
            </value>
            <value>
                <fullName>W18 Other manufactured wood products</fullName>
            </value>
            <value>
                <fullName>W19 Other wood products n.e.c.</fullName>
            </value>
            <value>
                <fullName>P1 Pulp</fullName>
            </value>
            <value>
                <fullName>P2 Paper</fullName>
            </value>
            <value>
                <fullName>P3 Paperboard</fullName>
            </value>
            <value>
                <fullName>P4 Corrugated paper and paperboard</fullName>
            </value>
            <value>
                <fullName>P5 Packaging and wrappings of paper</fullName>
            </value>
            <value>
                <fullName>P6 Household and sanitary products</fullName>
            </value>
            <value>
                <fullName>P7 Stationery of paper</fullName>
            </value>
            <value>
                <fullName>P8 Printed materials</fullName>
            </value>
            <value>
                <fullName>P9 Bobbins, spools, rolls and similar</fullName>
            </value>
            <value>
                <fullName>P10 Other pulp and paper products n.e.c.</fullName>
            </value>
            <value>
                <fullName>N1 Barks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>