force-app/main/default/objects/CertifiedProducts__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <label>Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W1.1 Roundwood (logs)</fullName>
            </value>
            <value>
                <fullName>W1.2 Fuel wood</fullName>
            </value>
            <value>
                <fullName>W1.3 Twigs</fullName>
            </value>
            <value>
                <fullName>W3.1 Wood chips</fullName>
            </value>
            <value>
                <fullName>W3.2 Sawdust</fullName>
            </value>
            <value>
                <fullName>W3.3 Wood shavings</fullName>
            </value>
            <value>
                <fullName>W3.4 Wood wool</fullName>
            </value>
            <value>
                <fullName>W3.5 Wood flour</fullName>
            </value>
            <value>
                <fullName>W3.6 Wood pellets</fullName>
            </value>
            <value>
                <fullName>W3.7 Sawdust briquettes</fullName>
            </value>
            <value>
                <fullName>W4.1 Impregnated roundwood</fullName>
            </value>
            <value>
                <fullName>W4.1 Impregnated railway sleepers/ties</fullName>
            </value>
            <value>
                <fullName>W4.3 Treated dimensional timber, lumber or plywood</fullName>
            </value>
            <value>
                <fullName>W5.1 Filtches and boules</fullName>
            </value>
            <value>
                <fullName>W5.2 Solid wood boards</fullName>
            </value>
            <value>
                <fullName>W5.3 Beams</fullName>
            </value>
            <value>
                <fullName>W5.4 Planks</fullName>
            </value>
            <value>
                <fullName>W5.5 Poles and piles</fullName>
            </value>
            <value>
                <fullName>W5.6 Railway ties, not impregnated</fullName>
            </value>
            <value>
                <fullName>W5.7 Raw wood for parquet flooring</fullName>
            </value>
            <value>
                <fullName>W5.8 Slabs and edgings</fullName>
            </value>
            <value>
                <fullName>W5.9 Pencil slats</fullName>
            </value>
            <value>
                <fullName>W6.1 Dimensional lumber, finished</fullName>
            </value>
            <value>
                <fullName>W6.2 Non-dimensional timber and lumber</fullName>
            </value>
            <value>
                <fullName>W6.3 Boards, finished</fullName>
            </value>
            <value>
                <fullName>W7.1 Peeled veneer</fullName>
            </value>
            <value>
                <fullName>W7.2 Sliced veneer</fullName>
            </value>
            <value>
                <fullName>W7.3 Sawn veneer</fullName>
            </value>
            <value>
                <fullName>W7.4 Veneer strips</fullName>
            </value>
            <value>
                <fullName>W8.1 Plywood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>