force-app/main/default/objects/CertifiedProducts__c/fields/Level_3__c.field-meta.xml
<CustomField>
    <fullName>Level_3__c</fullName>
    <label>Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W4.3.1 Treated glued laminated timber</fullName>
            </value>
            <value>
                <fullName>W4.3.2 Treated finger jointed lumber</fullName>
            </value>
            <value>
                <fullName>W8.1.1 Laminboard</fullName>
            </value>
            <value>
                <fullName>W8.1.2 Veneer plywood</fullName>
            </value>
            <value>
                <fullName>W8.2.1 Melamineparticleboard</fullName>
            </value>
            <value>
                <fullName>W8.2.2 Veneered particleboard</fullName>
            </value>
            <value>
                <fullName>W8.2.3 Oriented Strand Board(OSB)</fullName>
            </value>
            <value>
                <fullName>W8.2.4 Smooth-surface panel</fullName>
            </value>
            <value>
                <fullName>W8.2.5 Wood cement particleboard</fullName>
            </value>
            <value>
                <fullName>W8.2.6 Plasterboard</fullName>
            </value>
            <value>
                <fullName>W8.2.7 Strawboard</fullName>
            </value>
            <value>
                <fullName>W8.2.8 Graded particleboard</fullName>
            </value>
            <value>
                <fullName>W8.3.1 High-density fibreboard (HDF)</fullName>
            </value>
            <value>
                <fullName>W8.3.2 Medium-density fibreboard (MDF)</fullName>
            </value>
            <value>
                <fullName>W8.3.3 Softboard</fullName>
            </value>
            <value>
                <fullName>W8.3.4 Medium-hard-fibreboard</fullName>
            </value>
            <value>
                <fullName>W11.5.1 Laminate flooring</fullName>
            </value>
            <value>
                <fullName>W11.5.2 Parquet flooring</fullName>
            </value>
            <value>
                <fullName>W11.5.3 Plank flooring</fullName>
            </value>
            <value>
                <fullName>W11.5.4 Wood-block flooring</fullName>
            </value>
            <value>
                <fullName>W11.5.5 Engineered flooring</fullName>
            </value>
            <value>
                <fullName>W13.1.1 Garden tables</fullName>
            </value>
            <value>
                <fullName>W13.1.2 Gardenbenches</fullName>
            </value>
            <value>
                <fullName>W13.1.3 Garden chairs and stools</fullName>
            </value>
            <value>
                <fullName>W13.1.4 Hammocks and hammock frames</fullName>
            </value>
            <value>
                <fullName>W15.3.1 Bicycles</fullName>
            </value>
            <value>
                <fullName>W15.3.2 Bats, sticks, poles and paddles</fullName>
            </value>
            <value>
                <fullName>W15.3.3 Boards and skis</fullName>
            </value>
            <value>
                <fullName>W15.3.4 Other sporting goods</fullName>
            </value>
            <value>
                <fullName>P1.1.1 Groundwood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>