force-app/main/default/objects/CertifiedProducts__c/fields/Not_Yet_Bronze__c.field-meta.xml
<CustomField>
    <fullName>Not_Yet_Bronze__c</fullName>
    <label>Not Yet Bronze</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>