force-app/main/default/objects/CertifiedProducts__c/fields/NumberofProducers__c.field-meta.xml
<CustomField>
    <fullName>NumberofProducers__c</fullName>
    <label>Number of Producers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>