force-app/main/default/objects/CertifiedProducts__c/fields/Observed_during_audit__c.field-meta.xml
<CustomField>
    <fullName>Observed_during_audit__c</fullName>
    <label>Observed during audit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>