force-app/main/default/objects/CertifiedProducts__c/fields/Output_Category__c.field-meta.xml
<CustomField>
    <fullName>Output_Category__c</fullName>
    <label>Output Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSC 100%</fullName>
            </value>
            <value>
                <fullName>FSC Mix</fullName>
            </value>
            <value>
                <fullName>FSC Recycled</fullName>
            </value>
            <value>
                <fullName>FSC Controlled Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>