force-app/main/default/objects/CertifiedProducts__c/fields/Output_material__c.field-meta.xml
<CustomField>
    <fullName>Output_material__c</fullName>
    <label>Output material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>