force-app/main/default/objects/CertifiedProducts__c/fields/Parallel_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Parallel_Ownership__c</fullName>
    <label>Parallel Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>