force-app/main/default/objects/CertifiedProducts__c/fields/Print_On_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Print_On_Certificate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Print On Certificate</label>
    <type>Checkbox</type>
</CustomField>