force-app/main/default/objects/CertifiedProducts__c/fields/Producer_name_and_address__c.field-meta.xml
<CustomField>
    <fullName>Producer_name_and_address__c</fullName>
    <label>Producer name and address</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>