force-app/main/default/objects/CertifiedProducts__c/fields/Product_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Product_Certificate__c</fullName>
    <label>Product Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>