force-app/main/default/objects/CertifiedProducts__c/fields/Product_Handling_inspected_for_FSMA_PSR__c.field-meta.xml
<CustomField>
    <fullName>Product_Handling_inspected_for_FSMA_PSR__c</fullName>
    <label>Product Handling inspected for FSMA PSR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>