force-app/main/default/objects/CertifiedProducts__c/fields/Product_Handling_PostHarvest_Activity__c.field-meta.xml
<CustomField>
    <fullName>Product_Handling_PostHarvest_Activity__c</fullName>
    <label>Product Handling/ PostHarvest Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>