force-app/main/default/objects/CertifiedProducts__c/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <label>Product(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>