force-app/main/default/objects/CertifiedProducts__c/fields/Production_Area_NOT_covered_under_FSMA__c.field-meta.xml
<CustomField>
    <fullName>Production_Area_NOT_covered_under_FSMA__c</fullName>
    <label>Production Area NOT covered under FSMA</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>