force-app/main/default/objects/CertifiedProducts__c/fields/SAI_FSA__c.field-meta.xml
<CustomField>
    <fullName>SAI_FSA__c</fullName>
    <label>SAI/FSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>