force-app/main/default/objects/CertifiedProducts__c/fields/Secondary_Activity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Activity__c</fullName>
    <label>Secondary Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brokers/Traders without physical possession</fullName>
            </value>
            <value>
                <fullName>Brokers/Traders with physical possession</fullName>
            </value>
            <value>
                <fullName>Distributor/Wholesaler</fullName>
            </value>
            <value>
                <fullName>Gathering of non-wood products</fullName>
            </value>
            <value>
                <fullName>Logging</fullName>
            </value>
            <value>
                <fullName>Primary Processor</fullName>
            </value>
            <value>
                <fullName>Printing and related service</fullName>
            </value>
            <value>
                <fullName>Publishing activities</fullName>
            </value>
            <value>
                <fullName>Retailers</fullName>
            </value>
            <value>
                <fullName>Secondary Processor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>