force-app/main/default/objects/CertifiedProducts__c/fields/Silver__c.field-meta.xml
<CustomField>
    <fullName>Silver__c</fullName>
    <label>Silver</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>