force-app/main/default/objects/CertifiedProducts__c/fields/Sub_code__c.field-meta.xml
<CustomField>
    <fullName>Sub_code__c</fullName>
    <label>Sub- code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>