force-app/main/default/objects/CertifiedProducts__c/fields/Supply_Chain_Model__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Model__c</fullName>
    <label>Supply Chain Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>