force-app/main/default/objects/CertifiedProducts__c/fields/Volume_s__c.field-meta.xml
<CustomField>
    <fullName>Volume_s__c</fullName>
    <label>Volume(s)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>