force-app/main/default/objects/CertifiedProducts__c/recordTypes/Fairtrade_USA.recordType-meta.xml
<RecordType>
    <fullName>Fairtrade_USA</fullName>
    <active>true</active>
    <label>Fairtrade USA</label>
</RecordType>