force-app/main/default/objects/CertifiedProducts__c/recordTypes/Farm_Assurance.recordType-meta.xml
<RecordType>
    <fullName>Farm_Assurance</fullName>
    <active>true</active>
    <label>Farm Assurance</label>
</RecordType>