force-app/main/default/objects/CertifiedProducts__c/recordTypes/FLC.recordType-meta.xml
<RecordType>
    <fullName>FLC</fullName>
    <active>true</active>
    <label>FLC</label>
</RecordType>