force-app/main/default/objects/CertifiedProducts__c/recordTypes/FSMA.recordType-meta.xml
<RecordType>
    <fullName>FSMA</fullName>
    <active>true</active>
    <label>FSMA</label>
</RecordType>