force-app/main/default/objects/CertifiedProducts__c/recordTypes/Gluten_Free.recordType-meta.xml
<RecordType>
    <fullName>Gluten_Free</fullName>
    <active>true</active>
    <label>Gluten Free</label>
</RecordType>