force-app/main/default/objects/CertifiedProducts__c/recordTypes/Non_GMO.recordType-meta.xml
<RecordType>
    <fullName>Non_GMO</fullName>
    <active>true</active>
    <label>Non GMO</label>
</RecordType>